--- a/languages/bw.pot
+++ b/languages/bw.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "Project-Id-Version: Black Widgets\n"
-"POT-Creation-Date: 2024-03-21 08:28+0330\n"
+"POT-Creation-Date: 2024-06-30 13:56+0330\n"
 "PO-Revision-Date: 2020-05-23 23:07+0430\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1669,7 +1669,7 @@ msgid "Black Call To Action"
 msgstr ""
 
 #: includes/widgets/bw-call-to-action.php:128
-msgid "Let's get started today, <br /> Ever thought about joining us?"
+msgid "Let's get started today, Ever thought about joining us?"
 msgstr ""
 
 #: includes/widgets/bw-call-to-action.php:163
